force-app/main/default/objects/AO_Question_Library__c.object
<CustomObject>
    <description>Object to capture the questions which can be asked on the forms</description>
    <fields>
        <fullName>AO_Default_Value__c</fullName>
        <description>Default value for question</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Help_Text__c</fullName>
        <description>Help text for Question</description>
        <inlineHelpText>Enter Help text for the field</inlineHelpText>
        <label>Help Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AO_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Admins to deactivate a Question for further selection</description>
        <inlineHelpText>Allow Admins to deactivate a Question for further selection</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AO_Label_value__c</fullName>
        <description>Question Label</description>
        <label>Label value</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AO_Maps_To_Object__c</fullName>
        <description>Prefill object for Mapping</description>
        <label>Maps To(Object)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Maps_to_Field__c</fullName>
        <description>Prefill field for Mapping</description>
        <label>Maps to Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Picklist_Values__c</fullName>
        <description>Values to appear in case of Picklist and Radio type of question</description>
        <inlineHelpText>Enter values for Picklist type of field</inlineHelpText>
        <label>Picklist Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AO_Prefill_Value_Field__c</fullName>
        <description>Prefill field for Mapping</description>
        <inlineHelpText>Enter Field API Name for Prefill the field value</inlineHelpText>
        <label>Prefill Value Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AO_Prefill_Value_Object__c</fullName>
        <description>Prefill Object for Mapping</description>
        <inlineHelpText>Enter Object API Name for Prefill the field value</inlineHelpText>
        <label>Prefill Value(Object)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Course_Attempt__c</fullName>
                </value>
                <value>
                    <fullName>Emergency_Contact__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AO_Question__c</fullName>
        <description>Question Label for Forms</description>
        <inlineHelpText>Enter Question Label Text</inlineHelpText>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AO_Type__c</fullName>
        <description>Type for Question</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Display Text</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>File Upload</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category for business type</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Monash Led</fullName>
                </value>
                <value>
                    <fullName>Partner Led</fullName>
                </value>
                <value>
                    <fullName>Student Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Text_Value__c</fullName>
        <description>Output text for when Type = Display Text</description>
        <inlineHelpText>Output text for when Type = Display Text</inlineHelpText>
        <label>Display Text Value</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <label>Question Library</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AO_Question__c</columns>
        <columns>Category__c</columns>
        <columns>AO_Type__c</columns>
        <columns>AO_Prefill_Value_Object__c</columns>
        <columns>AO_Prefill_Value_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Questions</fullName>
        <columns>NAME</columns>
        <columns>AO_Question__c</columns>
        <columns>AO_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Questions</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Questions</fullName>
        <columns>NAME</columns>
        <columns>AO_Question__c</columns>
        <columns>Category__c</columns>
        <columns>AO_Type__c</columns>
        <columns>AO_Prefill_Value_Object__c</columns>
        <columns>AO_Prefill_Value_Field__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AO_Inactive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Inactive Questions</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Library</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>